--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "paginationhanlder",
+  "name": "pagination_hanlder",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-"build": "tsc --p tsconfig.build.json",
-"dev:start": "npm run build && node dist/index.js",
-"dev": "nodemon --watch src -e ts --exec npm run dev:start",
-"start": "npm run build && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --p tsconfig.build.json",
+    "dev:start": "npm run build && node dist/index.js",
+    "dev": "nodemon --watch src -e ts --exec npm run dev:start",
+    "start": "npm run build && node dist/index.js",
+    "bulk:insert": "node dist/handler/BulkInsertHandler.ts"
+  },
+  "_moduleAliases": {
+    "@": "./dist"
   },
   "repository": {
     "type": "git",
@@ -21,9 +24,14 @@
   },
   "homepage": "https://github.com/JuTiger-Lee/Pagination-Hanlder#readme",
   "dependencies": {
+    "@prisma/client": "^4.2.0",
     "dotenv": "^16.0.1",
     "env-var": "^7.1.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "inversify": "^6.0.1",
+    "module-alias": "^2.2.2",
+    "prisma": "^3.9.2",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
